components/rhdh/rhdh-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rhdh
  annotations:
    argocd.argoproj.io/sync-wave: '8'
