components/rhdh/rhdh-tls-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rhdh-tls
  namespace: rhdh
  annotations:
    argocd.argoproj.io/sync-wave: '10'
    service.beta.openshift.io/serving-cert-secret-name: rhdh-tls
spec:
  selector:
    rhdh.redhat.com/app: backstage-rhdh-developer-hub
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
