components/rhdh/rhdh-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhdh
  namespace: rhdh
  annotations:
    argocd.argoproj.io/sync-wave: '11'
spec:
  host: rhdh.apps.ocp.igou.systems
  to:
    kind: Service
    name: rhdh-tls
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
